--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-test
+<head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+  <script></script>
+  <title>Developed BY cyber-sec0</title>
+</head>
+<body onload="type_text()" style="background-color: rgb(0, 0, 0);>
+<div class="separator" style="text-align: center;">
+<script>
+<!--
+var tl=new Array("Starting Information .......................................................",
+"",
+"Developed BY [cyber-sec0] .....................................................",
+"",
+"Site in construction ...........................................................",
+"",
+"Good Bye."
+)
+var speed=60;
+var index=0; text_pos=0;
+var str_length=tl[0].length;
+var contents, row;
+function type_text()
+{
+contents='';
+row=Math.max(0,index-20);
+while(row<index)
+contents += tl[row++] + '\r\n';
+document.forms[0].elements[0].value = contents + tl[index].substring(0,text_pos) + "_";
+if(text_pos++==str_length)
+{
+text_pos=0;
+index++;
+if(index!=tl.length)
+{
+str_length=tl[index].length;
+setTimeout("type_text()",1500);
+}
+} else
+setTimeout("type_text()",speed);
+}
+</script>
+<div class="separator" style="text-align: center;"><form><textarea style="background-color: rgb(0, 0, 0); color: rgb(0, 255, 0);" readonly="readonly" rows="18" cols="80">_</textarea><br>
+</form>
+</body></html>
