--- a/index.html
+++ b/index.html
@@ -1,43 +1,97 @@
-<head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  <script></script>
-  <title>Developed BY cyber-sec0</title>
-</head>
-<body onload="type_text()" style="background-color: rgb(0, 0, 0);>
-<div class="separator" style="text-align: center;">
-<script>
-<!--
-var tl=new Array("Starting Information .......................................................",
-"",
-"Developed BY [cyber-sec0] .....................................................",
-"",
-"Site in construction ...........................................................",
-"",
-"Good Bye."
-)
-var speed=60;
-var index=0; text_pos=0;
-var str_length=tl[0].length;
-var contents, row;
-function type_text()
-{
-contents='';
-row=Math.max(0,index-20);
-while(row<index)
-contents += tl[row++] + '\r\n';
-document.forms[0].elements[0].value = contents + tl[index].substring(0,text_pos) + "_";
-if(text_pos++==str_length)
-{
-text_pos=0;
-index++;
-if(index!=tl.length)
-{
-str_length=tl[index].length;
-setTimeout("type_text()",1500);
-}
-} else
-setTimeout("type_text()",speed);
-}
-</script>
-<div class="separator" style="text-align: center;"><form><textarea style="background-color: rgb(0, 0, 0); color: rgb(0, 255, 0);" readonly="readonly" rows="18" cols="80">_</textarea><br>
-</form>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hacker09's Crypto Wallets</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Hacker09's Crypto Wallets</h1>
+      <table>
+        <tr>
+          <th>Crypto</th>
+          <th>Wallet Address</th>
+        </tr>
+        <tr>
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" title="BTC" class="crypto-icon" />
+            <p class="crypto-text">BTC</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
+        </tr>
+        <tr>
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BCH.png" title="BCH" class="crypto-icon" />
+            <p class="crypto-text">BCH</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">3P3FzYExuNpGpXA4Dwjd2rsRLAnsDaUxTR</td>
+        </tr>
+        <tr>
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/LTC.png" title="LTC" class="crypto-icon" />
+            <p class="crypto-text">LTC</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">MW2qWHsAVVkUrMyE4FThCfUCY5DtrYgEyc</td>
+        </tr>
+        <tr>
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/ether.svg" title="ETH" class="crypto-icon" />
+            <p class="crypto-text">ETH</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">0x6BD1162a158E1758fF8A665676A17094A46D9e16</td>
+        </tr>
+        <!-- ML -->
+        <tr class="ML">
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" title="BTC" class="crypto-icon" />
+            <p class="crypto-text">BTC</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">bc1q9x3rwd53gkpnp2pxsdvd3vqqmkyy2dh627l3ft</td>
+        </tr>
+        <tr class="ML">
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/LTC.png" title="LTC" class="crypto-icon" />
+            <p class="crypto-text">LTC</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">ltc1qs40c7gaqwmn2ja36t2gk2nruq5ejm84rlhtzhp</td>
+        </tr>
+        <tr class="ML">
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/ether.svg" title="ETH" class="crypto-icon" />
+            <p class="crypto-text">ETH</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">0x2fda9dbd8F4b9C0890d2941250e7090efF2034DB</td>
+        </tr>
+        <tr class="ML">
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/usdp.png" title="USDP" class="crypto-icon" />
+            <p class="crypto-text">USDP</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">0xB35fE8c55B1764646E13af6aFa127f8CF629Ab3f</td>
+        </tr>
+        <tr class="ML">
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/uniswap.webp?v=1717631862109" title="Uniswap" class="crypto-icon" />
+            <p class="crypto-text">Uniswap</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">0x47B51D4814e8816fA2000937b7d3A79267D2e675</td>
+        </tr>
+        <tr class="ML">
+          <td>
+            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/chainlink.png" title="Chainlink" class="crypto-icon" />
+            <p class="crypto-text">LINK</p>
+          </td>
+          <td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
+        </tr>
+      </table>
+    </div>
+    <div class="copy-message" id="copyMessage">Copied!</div>
+    <div id="sfc21yux4qkrs2p7put9szj1b4u4sfzth2d" style="display: none"></div>
+    <a href="https://www.freecounterstat.com/geozoom.php?c=&base=counter4"></a>
+    <script src="https://counter4.optistats.ovh/private/counter.js?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&down=async" async></script>
+    <script src="script.js" async></script>
+  </body>
+</html>
