--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <h1>Hacker09's Crypto Wallets</h1>
+      <p>Contact me at <a href="github.com.036t8@passfwd.com">github.com.036t8@passfwd.com</a></p>
       <table>
         <tr>
           <th>Crypto</th>
