--- a/index.html
+++ b/index.html
@@ -1,98 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hacker09's Crypto Wallets</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>Hacker09's Crypto Wallets</h1>
-      <p style="text-align: center;">Contact me at <a href="github.com.036t8@passfwd.com">github.com.036t8@passfwd.com</a></p>
-      <table>
-        <tr>
-          <th>Crypto</th>
-          <th>Wallet Address</th>
-        </tr>
-        <tr>
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" title="BTC" class="crypto-icon" />
-            <p class="crypto-text">BTC</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
-        </tr>
-        <tr>
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BCH.png" title="BCH" class="crypto-icon" />
-            <p class="crypto-text">BCH</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">3P3FzYExuNpGpXA4Dwjd2rsRLAnsDaUxTR</td>
-        </tr>
-        <tr>
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/LTC.png" title="LTC" class="crypto-icon" />
-            <p class="crypto-text">LTC</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">MW2qWHsAVVkUrMyE4FThCfUCY5DtrYgEyc</td>
-        </tr>
-        <tr>
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/ether.svg" title="ETH" class="crypto-icon" />
-            <p class="crypto-text">ETH</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">0x6BD1162a158E1758fF8A665676A17094A46D9e16</td>
-        </tr>
-        <!-- ML -->
-        <tr class="ML">
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" title="BTC" class="crypto-icon" />
-            <p class="crypto-text">BTC</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">bc1q9x3rwd53gkpnp2pxsdvd3vqqmkyy2dh627l3ft</td>
-        </tr>
-        <tr class="ML">
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/LTC.png" title="LTC" class="crypto-icon" />
-            <p class="crypto-text">LTC</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">ltc1qs40c7gaqwmn2ja36t2gk2nruq5ejm84rlhtzhp</td>
-        </tr>
-        <tr class="ML">
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/ether.svg" title="ETH" class="crypto-icon" />
-            <p class="crypto-text">ETH</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">0x2fda9dbd8F4b9C0890d2941250e7090efF2034DB</td>
-        </tr>
-        <tr class="ML">
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/usdp.png" title="USDP" class="crypto-icon" />
-            <p class="crypto-text">USDP</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">0xB35fE8c55B1764646E13af6aFa127f8CF629Ab3f</td>
-        </tr>
-        <tr class="ML">
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/uniswap.webp?v=1717631862109" title="Uniswap" class="crypto-icon" />
-            <p class="crypto-text">Uniswap</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">0x47B51D4814e8816fA2000937b7d3A79267D2e675</td>
-        </tr>
-        <tr class="ML">
-          <td>
-            <img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/chainlink.png" title="Chainlink" class="crypto-icon" />
-            <p class="crypto-text">LINK</p>
-          </td>
-          <td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
-        </tr>
-      </table>
-    </div>
-    <div class="copy-message" id="copyMessage">Copied!</div>
-    <div id="sfc21yux4qkrs2p7put9szj1b4u4sfzth2d" style="display: none"></div>
-    <a href="https://www.freecounterstat.com/geozoom.php?c=&base=counter4"></a>
-    <script src="https://counter4.optistats.ovh/private/counter.js?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&down=async" async></script>
-    <script src="script.js" async></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Hacker09's Crypto Wallets</title>
+		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" href="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" />
+	</head>
+	<body>
+		<div class="container">
+			<h1>Hacker09's Crypto Wallets</h1>
+			<p style="text-align: center">Contact me at <a href="mailto:github.com.036t8@passfwd.com">github.com.036t8@passfwd.com</a></p>
+			<table>
+				<tr>
+					<th>Crypto</th>
+					<th>Wallet Address</th>
+				</tr>
+				<tr>
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" title="BTC" class="crypto-icon" />
+						<p class="crypto-text">BTC</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
+				</tr>
+				<tr>
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BCH.png" title="BCH" class="crypto-icon" />
+						<p class="crypto-text">BCH</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">3P3FzYExuNpGpXA4Dwjd2rsRLAnsDaUxTR</td>
+				</tr>
+				<tr>
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/LTC.png" title="LTC" class="crypto-icon" />
+						<p class="crypto-text">LTC</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">MW2qWHsAVVkUrMyE4FThCfUCY5DtrYgEyc</td>
+				</tr>
+				<tr>
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/ether.svg" title="ETH" class="crypto-icon" />
+						<p class="crypto-text">ETH</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">0x6BD1162a158E1758fF8A665676A17094A46D9e16</td>
+				</tr>
+				<!-- ML -->
+				<tr class="ML">
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/BTC.png?v=1717631404798" title="BTC" class="crypto-icon" />
+						<p class="crypto-text">BTC</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">bc1q9x3rwd53gkpnp2pxsdvd3vqqmkyy2dh627l3ft</td>
+				</tr>
+				<tr class="ML">
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/LTC.png" title="LTC" class="crypto-icon" />
+						<p class="crypto-text">LTC</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">ltc1qs40c7gaqwmn2ja36t2gk2nruq5ejm84rlhtzhp</td>
+				</tr>
+				<tr class="ML">
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/ether.svg" title="ETH" class="crypto-icon" />
+						<p class="crypto-text">ETH</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">0x2fda9dbd8F4b9C0890d2941250e7090efF2034DB</td>
+				</tr>
+				<tr class="ML">
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/usdp.png" title="USDP" class="crypto-icon" />
+						<p class="crypto-text">USDP</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">0xB35fE8c55B1764646E13af6aFa127f8CF629Ab3f</td>
+				</tr>
+				<tr class="ML">
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/uniswap.webp?v=1717631862109" title="Uniswap" class="crypto-icon" />
+						<p class="crypto-text">Uniswap</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">0x47B51D4814e8816fA2000937b7d3A79267D2e675</td>
+				</tr>
+				<tr class="ML">
+					<td>
+						<img src="https://cdn.glitch.global/0b33ddf5-89e2-4809-b2c9-7d3fc2ac722c/chainlink.png" title="Chainlink" class="crypto-icon" />
+						<p class="crypto-text">LINK</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
+				</tr>
+			</table>
+		</div>
+		<div class="copy-message" id="copyMessage">Copied!</div>
+		<div id="sfc21yux4qkrs2p7put9szj1b4u4sfzth2d" style="display: none"></div>
+		<a href="https://www.freecounterstat.com/geozoom.php?c=&base=counter4"></a>
+		<script src="https://counter4.optistats.ovh/private/counter.js?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&down=async" async></script>
+		<script src="script.js" async></script>
+	</body>
 </html>
