--- a/AIMenu.html
+++ b/AIMenu.html
@@ -1,7 +1,7 @@
 <svg width=" 0" height=" 0">
   <defs>
     <radialgradient cx="0" cy="0" r="1" gradientunits="userSpaceOnUse" gradienttransform="translate(2.77876 11.3795) rotate(18.6832) scale(29.8025 238.737)" id="paint">
-      <stop offset="0.0671246" stop-color=#9168C0"></stop>
+      <stop offset="0.0671246" stop-color="#9168C0"></stop>
       <stop offset="0.342551" stop-color="#5684D1"></stop>
       <stop offset="0.672076" stop-color="#1BA1E3"></stop>
     </radialgradient>
