--- a/AIMenu.html
+++ b/AIMenu.html
@@ -483,12 +483,12 @@
 
 	.prompt-arrow-left {
 		left: -45px;
-    /*left: calc(50% - 165px); /* Adjust based on container width */
+    /*left: calc(50% - 165px); */
 	}
 
 	.prompt-arrow-right {
 		right: -45px;
-    /*right: calc(50% - 165px); /* Adjust based on container width */
+    /*right: calc(50% - 165px); */
 	}
 
 	.prompt-arrow svg {
