--- a/AIMenu.html
+++ b/AIMenu.html
@@ -64,30 +64,25 @@
 	@keyframes magnifyIn {
 		0% {
 			transform: translateX(-50%) scale(0.97);
+			opacity: 0.8;
+		}
+		30% {
+			transform: translateX(-50%) scale(1.03);
+			opacity: 0.95;
+		}
+		70% {
+			transform: translateX(-50%) scale(0.99);
+			opacity: 1;
 		}
 		100% {
 			transform: translateX(-50%) scale(1);
+			opacity: 1;
 		}
 	}
 
 	.magnify-animation {
-		animation: magnifyIn 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+		animation: magnifyIn 0.9s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 		transform-origin: center center;
-	}
-
-	.prompt-arrow {
-		position: absolute;
-		transform: translateZ(0) !important;
-		animation: arrow-compensation 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-	}
-
-	@keyframes arrow-compensation {
-		0% {
-			transform: translateZ(0) scale(1.03);
-		}
-		100% {
-			transform: translateZ(0) scale(1);
-		}
 	}
 
 	/* Buttons */
