--- a/AIMenu.html
+++ b/AIMenu.html
@@ -299,14 +299,8 @@
 		margin-bottom: -4%;
 	}
 
-	/* If the AI replied with a title */
-	#finalanswer:has(h2) {
-		margin-top: 2.2%;
-	}
-
-	/* If the AI replied with a simple text */
-	#finalanswer:not(:has(h2)) {
-		margin-top: 2.2%;
+	#finalanswer-txt {
+		padding-top: 3.5%;
 	}
 
 	/* Keep the AIMenu at the bottom right independent of the text response size */
@@ -525,11 +519,6 @@
 	}
 
 	/* Miscellaneous */
-	#msg {
-		margin-bottom: 3%;
-		margin-top: 1.5%;
-	}
-
 	.GreyBar,
 	#CopyBTN > span {
 		color: #7b7d7f;
@@ -553,11 +542,11 @@
 	}
 
 	#LineEl {
-		position: fixed;
 		width: 96%;
 		height: 1px;
-		margin-left: -6%;
-		margin-top: 8%;
+		margin-top: 3%;
+		position: fixed;
+		margin-left: -8%;
 		background-color: #41455a;
 	}
 
@@ -591,11 +580,11 @@
 		background-color: rgb(255, 122, 0);
 	}
 
+	/* Mode-specific styles Writing Mode */
 	#writing {
 		background-color: #00c2a8;
 	}
 
-	/* Mode-specific styles */
 	.mode-normal #gemini {
 		display: block;
 	}
@@ -649,8 +638,10 @@
 
 	/* SVGs */
 	#avatar {
+		margin-left: 0;
 		margin-top: 1%;
-		margin-left: -10px;
+		position: relative;
+		z-index: 999999999;
 	}
 
 	.BoxGemini > svg {
@@ -665,11 +656,9 @@
 	}
 
 	#ContainerGemini.BoxGemini {
-		width: 0%;
-		height: 0%;
-		margin-top: 10%;
-		position: fixed;
+		margin-top: 5%;
 		margin-left: -6%;
+		position: fixed;
 	}
 
 	.AI-BG-box button img {
@@ -693,17 +682,34 @@
 		height: 100%;
 		position: absolute;
 	}
+
+	.header-bar {
+		/* Must be initially hidden */
+		top: 8%;
+		left: 50%;
+		color: #ffffff;
+		font-size: 10px;
+		padding: 4px 8px;
+		position: absolute;
+		z-index: 9999999 !important;
+		background-color: #000000;
+		border-top-left-radius: 6px;
+		transform: translateX(-50%);
+		border-top-right-radius: 6px;
+		font-family: 'Space Mono', monospace;
+	}
 </style>
+<!-- <div class="header-bar">Gemini 2.0 / Imagen 3</div> -->
 <div id="highlight_menu">
 	<div class="AI-BG-box">
 		<button id="AIBTN" class="show-button">
 			<div class="MenuGemini">
-				<svg viewbox="0 0 32 32" fill="none"><path d="M14 28C14 26.0633 13.6267 24.2433 12.88 22.54C12.1567 20.8367 11.165 19.355 9.905 18.095C8.645 16.835 7.16333 15.8433 5.46 15.12C3.75667 14.3733 1.93667 14 0 14C1.93667 14 3.75667 13.6383 5.46 12.915C7.16333 12.1683 8.645 11.165 9.905 9.905C11.165 8.645 12.1567 7.16333 12.88 5.46C13.6267 3.75667 14 1.93667 14 0C14 1.93667 14.3617 3.75667 15.085 5.46C15.8317 7.16333 16.835 8.645 18.095 9.905C19.355 11.165 20.8367 12.1683 22.54 12.915C24.2433 13.6383 26.0633 14 28 14C26.0633 14 24.2433 14.3733 22.54 15.12C20.8367 15.8433 19.355 16.835 18.095 18.095C16.835 19.355 15.8317 20.8367 15.085 22.54C14.3617 24.2433 14 26.0633 14 28Z" fill="url(#paint)"></path></svg>Explore more
+				<svg viewbox="0 0 32 32" fill="none"><path id="gemini-path" d="M14 28C14 26.0633 13.6267 24.2433 12.88 22.54C12.1567 20.8367 11.165 19.355 9.905 18.095C8.645 16.835 7.16333 15.8433 5.46 15.12C3.75667 14.3733 1.93667 14 0 14C1.93667 14 3.75667 13.6383 5.46 12.915C7.16333 12.1683 8.645 11.165 9.905 9.905C11.165 8.645 12.1567 7.16333 12.88 5.46C13.6267 3.75667 14 1.93667 14 0C14 1.93667 14.3617 3.75667 15.085 5.46C15.8317 7.16333 16.835 8.645 18.095 9.905C19.355 11.165 20.8367 12.1683 22.54 12.915C24.2433 13.6383 26.0633 14 28 14C26.0633 14 24.2433 14.3733 22.54 15.12C20.8367 15.8433 19.355 16.835 18.095 18.095C16.835 19.355 15.8317 20.8367 15.085 22.54C14.3617 24.2433 14 26.0633 14 28Z" fill="url(#paint)"></path></svg>Explore more
 			</div>
 		</button>
 		<button id="AIBTN" class="translate show-button">
 			<div class="MenuGemini">
-				<svg viewbox="0 0 32 32" fill="none"><path d="M14 28C14 26.0633 13.6267 24.2433 12.88 22.54C12.1567 20.8367 11.165 19.355 9.905 18.095C8.645 16.835 7.16333 15.8433 5.46 15.12C3.75667 14.3733 1.93667 14 0 14C1.93667 14 3.75667 13.6383 5.46 12.915C7.16333 12.1683 8.645 11.165 9.905 9.905C11.165 8.645 12.1567 7.16333 12.88 5.46C13.6267 3.75667 14 1.93667 14 0C14 1.93667 14.3617 3.75667 15.085 5.46C15.8317 7.16333 16.835 8.645 18.095 9.905C19.355 11.165 20.8367 12.1683 22.54 12.915C24.2433 13.6383 26.0633 14 28 14C26.0633 14 24.2433 14.3733 22.54 15.12C20.8367 15.8433 19.355 16.835 18.095 18.095C16.835 19.355 15.8317 20.8367 15.085 22.54C14.3617 24.2433 14 26.0633 14 28Z" fill="url(#paint)"></path></svg>Translate
+				<svg viewbox="0 0 32 32" fill="none"><use href="#gemini-path" /></svg>Translate
 			</div>
 		</button>
 	</div>
@@ -711,7 +717,7 @@
 		<li class="popuptext"></li>
 		<li id="ShowCurrencyORUnits"></li>
 		<li class="popuptext" id="SearchBTN">Search</li>
-		<li class="popuptext" id="CopyBTN"><span>│</span> Copy</li>
+		<li class="popuptext" id="CopyBTN"><span>â</span> Copy</li>
 	</ul>
 </div>
 <div class="animated-prompt-box" id="AIBox">
@@ -758,7 +764,7 @@
 		</svg>
 	</button>
 	<div class="BoxGemini" id="gemini">
-		<svg viewbox="0 0 32 32" fill="none"><path d="M14 28C14 26.0633 13.6267 24.2433 12.88 22.54C12.1567 20.8367 11.165 19.355 9.905 18.095C8.645 16.835 7.16333 15.8433 5.46 15.12C3.75667 14.3733 1.93667 14 0 14C1.93667 14 3.75667 13.6383 5.46 12.915C7.16333 12.1683 8.645 11.165 9.905 9.905C11.165 8.645 12.1567 7.16333 12.88 5.46C13.6267 3.75667 14 1.93667 14 0C14 1.93667 14.3617 3.75667 15.085 5.46C15.8317 7.16333 16.835 8.645 18.095 9.905C19.355 11.165 20.8367 12.1683 22.54 12.915C24.2433 13.6383 26.0633 14 28 14C26.0633 14 24.2433 14.3733 22.54 15.12C20.8367 15.8433 19.355 16.835 18.095 18.095C16.835 19.355 15.8317 20.8367 15.085 22.54C14.3617 24.2433 14 26.0633 14 28Z" fill="url(#paint)"></path></svg>
+		<svg viewbox="0 0 32 32" fill="none"><use href="#gemini-path" /></svg>
 	</div>
 	<div id="context">PAGE CONTEXT</div>
 	<!-- <div id="writing">WRITING</div> -->
@@ -779,12 +785,16 @@
 			</svg>
 		</div>
 		<div class="AnswerContainer">
-			<div id="msg"></div>
-			<div id="LineEl"></div>
-			<div class="BoxGemini" id="ContainerGemini">
-				<svg viewbox="0 0 32 32" fill="none"><path d="M14 28C14 26.0633 13.6267 24.2433 12.88 22.54C12.1567 20.8367 11.165 19.355 9.905 18.095C8.645 16.835 7.16333 15.8433 5.46 15.12C3.75667 14.3733 1.93667 14 0 14C1.93667 14 3.75667 13.6383 5.46 12.915C7.16333 12.1683 8.645 11.165 9.905 9.905C11.165 8.645 12.1567 7.16333 12.88 5.46C13.6267 3.75667 14 1.93667 14 0C14 1.93667 14.3617 3.75667 15.085 5.46C15.8317 7.16333 16.835 8.645 18.095 9.905C19.355 11.165 20.8367 12.1683 22.54 12.915C24.2433 13.6383 26.0633 14 28 14C26.0633 14 24.2433 14.3733 22.54 15.12C20.8367 15.8433 19.355 16.835 18.095 18.095C16.835 19.355 15.8317 20.8367 15.085 22.54C14.3617 24.2433 14 26.0633 14 28Z" fill="url(#paint)"></path></svg>
+			<div id="msg">
+				<span id="msg-txt"></span>
+				<div id="LineEl"></div>
 			</div>
-			<div id="finalanswer"></div>
+			<div id="finalanswer">
+				<div class="BoxGemini" id="ContainerGemini">
+					<svg viewbox="0 0 32 32" fill="none"><use href="#gemini-path" /></svg>
+				</div>
+				<div id="finalanswer-txt"></div>
+			</div>
 			<p id="LoadBar"></p>
 			<div id="AIMenu">
 				<button id="SpeakingPause" class="MenuBTNs" title="Stop">
