--- a/AIMenu.html
+++ b/AIMenu.html
@@ -300,7 +300,7 @@
 	}
 
 	#finalanswer-txt {
-		padding-top: 3.5%;
+		padding-top: 3%;
 	}
 
 	/* Keep the AIMenu at the bottom right independent of the text response size */
@@ -717,7 +717,7 @@
 		<li class="popuptext"></li>
 		<li id="ShowCurrencyORUnits"></li>
 		<li class="popuptext" id="SearchBTN">Search</li>
-		<li class="popuptext" id="CopyBTN"><span>│</span> Copy</li>
+		<li class="popuptext" id="CopyBTN"><span>â</span> Copy</li>
 	</ul>
 </div>
 <div class="animated-prompt-box" id="AIBox">
