--- a/AIMenu.html
+++ b/AIMenu.html
@@ -698,6 +698,10 @@
 		border-top-right-radius: 6px;
 		font-family: 'Space Mono', monospace;
 	}
+
+	#msg-txt p {
+		margin: 0;
+	}
 </style>
 <!-- <div class="header-bar">Gemini 2.0 / Imagen 3</div> -->
 <div id="highlight_menu">
