--- a/AIMenu.html
+++ b/AIMenu.html
@@ -721,7 +721,7 @@
 		<li class="popuptext"></li>
 		<li id="ShowCurrencyORUnits"></li>
 		<li class="popuptext" id="SearchBTN">Search</li>
-		<li class="popuptext" id="CopyBTN"><span>│</span> Copy</li>
+		<li class="popuptext" id="CopyBTN"><span>&#x2502;</span> Copy</li>
 	</ul>
 </div>
 <div class="animated-prompt-box" id="AIBox">
