--- a/AIMenu.html
+++ b/AIMenu.html
@@ -8,6 +8,13 @@
 	</defs>
 </svg>
 <style>
+	@font-face {
+		font-family: 'Be Vietnam';
+		font-style: normal;
+		font-weight: 400;
+		src: url(https://fonts.gstatic.com/s/bevietnam/v10/FBVzdDflz-iPfoPuIC2iIqYn6A.woff2) format('woff2');
+		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	}
 	/* Keyframes */
 	@keyframes stateAnimation {
 		0%,
@@ -301,6 +308,11 @@
 
 	#finalanswer-txt {
 		padding-top: 3%;
+		font-family: 'Be Vietnam', sans-serif;
+		font-size: 14px;
+		line-height: 19.6px;
+		font-style: normal;
+		color: #ffffff;
 	}
 
 	/* Keep the AIMenu at the bottom right independent of the text response size */
@@ -311,7 +323,6 @@
 
 	#AIAnswer {
 		display: flex;
-		margin-left: 2%;
 		align-items: flex-start;
 	}
 
@@ -325,8 +336,8 @@
 		gap: 7%;
 		display: none;
 		margin-top: 1%;
-		margin-left: 78%;
-		padding-bottom: 2%;
+		margin-left: 80%;
+		padding-bottom: 3%;
 	}
 
 	.AnswerContainer {
@@ -548,14 +559,14 @@
 		height: 1px;
 		margin-top: 3%;
 		position: fixed;
-		margin-left: -8%;
+		margin-left: -5%;
 		background-color: #41455a;
 	}
 
 	#prompt {
-		left: 1%;
+		left: 2%;
 		border: none;
-		width: 64.5%;
+		width: 65%;
 		outline: none; /* Hide onclick borders */
 		user-select: none;
 		position: relative;
@@ -640,7 +651,6 @@
 
 	/* SVGs */
 	#avatar {
-		margin-left: 0;
 		margin-top: 1%;
 		position: relative;
 		z-index: 999999999;
@@ -659,7 +669,7 @@
 
 	#ContainerGemini.BoxGemini {
 		margin-top: 5%;
-		margin-left: -6%;
+		margin-left: -5%;
 		position: fixed;
 	}
 
@@ -686,15 +696,14 @@
 	}
 
 	.header-bar {
-		/* Must be initially hidden */
-		top: 8%;
 		left: 50%;
+		top: -25.5%;
 		color: #ffffff;
 		font-size: 10px;
 		padding: 4px 8px;
 		position: absolute;
 		z-index: 9999999 !important;
-		background-color: #000000;
+		background-color: #383a47;
 		border-top-left-radius: 6px;
 		transform: translateX(-50%);
 		border-top-right-radius: 6px;
@@ -705,7 +714,6 @@
 		margin: 0;
 	}
 </style>
-<!-- <div class="header-bar">Gemini 2.0 / Imagen 3</div> -->
 <div id="highlight_menu">
 	<div class="AI-BG-box">
 		<button id="AIBTN" class="show-button">
@@ -732,6 +740,7 @@
 	</svg>
 </div>
 <div class="animated-prompt-box" id="AIBox">
+	<div class="header-bar">Gemini 2.0</div>
 	<!-- <div class="animated-prompt-box mode-normal" id="AIBox"> Writing Mode -->
 	<div id="tabcontext">
 		<p>Switch mode</p>
