--- a/AIMenu.html
+++ b/AIMenu.html
@@ -605,11 +605,11 @@
 	.header-bar {
 		left: 50%;
 		top: -24%;
+		z-index: 1;
 		color: #ffffff;
 		font-size: 10px;
 		padding: 4px 8px;
 		position: absolute;
-		z-index: 9999999 !important;
 		background-color: #383a47;
 		border-top-left-radius: 6px;
 		transform: translateX(-50%);
