--- a/AIMenu.html
+++ b/AIMenu.html
@@ -117,12 +117,15 @@
 		border: none;
 		display: flex;
 		margin-top: 3%;
-		cursor: pointer;
 		margin-left: 4%;
+		font-size: 12px;
+		cursor: pointer;
 		position: inherit;
-		border-radius: 7px;
+		border-radius: 8px;
 		width: fit-content;
+		letter-spacing: 0.3px;
 		background-color: #5021ff;
+		font-family: 'Google Sans', 'Roboto', sans-serif;
 	}
 
 	.MenuBTNs {
@@ -280,12 +283,8 @@
 
 	/* Containers */
 	#finalanswer-txt {
-		padding-top: 3%;
-		font-size: 14px;
-		line-height: 19.6px;
-		font-style: normal;
+		padding-top: 4%;
 		color: light-dark(black, #ffffff);
-		font-family: 'Be Vietnam', sans-serif;
 	}
 
 	/* Keep the AIMenu at the bottom right independent of the text response size */
@@ -323,10 +322,9 @@
 		position: relative;
 		flex-direction: column;
 		text-size-adjust: 100%;
-		text-shadow: 0 0 0px #fff;
-		line-height: 1.4rem !important;
+		line-height: 19.6px !important;
 		color: light-dark(black, white);
-		font-family: 'Segoe UI', Tahoma, sans-serif !important;
+		font-family: 'Be Vietnam', sans-serif !important;
 	}
 
 	#CloseOverlay {
@@ -359,11 +357,12 @@
 		display: flex;
 		color: #8a8d91;
 		position: fixed;
+		font-size: 12px;
 		z-index: 999999;
 		user-select: none;
 		margin-left: 72.5%;
 		align-items: center;
-		font-size: 14px !important;
+		font-family: 'Be Vietnam', sans-serif;
 	}
 
 	#TabBox {
@@ -371,6 +370,7 @@
 		font-size: 75%;
 		color: #94999e;
 		height: 1.5rem;
+		font-size: 12px;
 		border-width: 1px;
 		align-items: center;
 		border-style: solid;
@@ -562,8 +562,8 @@
 	#LineEl {
 		width: 96%;
 		height: 1px;
-		margin-top: 3%;
 		position: fixed;
+		margin-top: 3.5%;
 		margin-left: -5%;
 		background-color: #41455a;
 	}
@@ -576,10 +576,19 @@
 		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 	}
 
+	@font-face {
+		font-family: 'Google Sans';
+		font-style: normal;
+		font-weight: 400;
+		src: url(https://fonts.gstatic.com/s/googlesans/v45/4UaGrENHsxJlGDuGo1OIlL3Owps.woff2) format('woff2');
+		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	}
+
 	#prompt {
 		left: 2%;
 		border: none;
-		width: 65%;
+		width: 63.5%;
+		font-size: 14px;
 		outline: none; /* Hide onclick borders */
 		user-select: none;
 		position: relative;
@@ -610,11 +619,10 @@
 		font-size: 10px;
 		padding: 4px 8px;
 		position: absolute;
-		background-color: #383a47;
+		background-color: #373a47;
 		border-top-left-radius: 6px;
 		transform: translateX(-50%);
 		border-top-right-radius: 6px;
-		font-family: 'Space Mono', monospace;
 	}
 
 	/* Mode-specific styles Writing Mode */
@@ -686,15 +694,15 @@
 	}
 
 	#gemini.BoxGemini {
-		margin-left: 2%;
-		margin-top: 0.5%;
+		margin-top: 1%;
+		margin-left: 2.5%;
 		position: absolute;
 	}
 
 	#ContainerGemini.BoxGemini {
-		margin-top: 5%;
-		margin-left: -5%;
 		position: fixed;
+		margin-top: 5.2%;
+		margin-left: -6.2%;
 	}
 
 	.AI-BG-box button img {
@@ -707,8 +715,8 @@
 	.MenuGemini > svg {
 		width: 45px;
 		height: 25px;
-		margin-left: -12px;
-		margin-right: -15px;
+		margin-left: -13px;
+		margin-right: -13px;
 	}
 
 	#dictateSvg {
