--- a/AIMenu.html
+++ b/AIMenu.html
@@ -290,6 +290,14 @@
 		color: light-dark(black, #ffffff);
 	}
 
+	#finalanswer-txt img {
+		max-width: 85%;
+		margin-top: 2%;
+		margin-left: 4%;
+		margin-bottom: 2%;
+		border-radius: 8px;
+	}
+
 	/* Keep the AIMenu at the bottom right independent of the text response size */
 	#AIAnswer,
 	.AnswerContainer {
@@ -508,7 +516,7 @@
 	}
 
 	/* Miscellaneous */
-  @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam&family=Google+Sans&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam&family=Google+Sans&display=swap');
 
 	#msg-txt p {
 		margin: 0;
