--- a/AIMenu.html
+++ b/AIMenu.html
@@ -292,6 +292,7 @@
 
 	#finalanswer-txt img {
 		max-width: 85%;
+		cursor: pointer;
 		margin-bottom: 2%;
 		border-radius: 8px;
 	}
@@ -317,7 +318,7 @@
 		gap: 7%;
 		display: none;
 		margin-top: 1%;
-		margin-left: 80%;
+		margin-left: 79%;
 		padding-bottom: 3%;
 	}
 
@@ -721,6 +722,58 @@
 		height: 100%;
 		position: absolute;
 	}
+
+	/* IMGOverlay */
+	#IMGOverlay {
+		top: 0;
+		width: 100%;
+		height: 100%;
+		display: none;
+		position: fixed;
+		z-index: 10000000;
+		background-color: rgba(21, 35, 43, 0.67);
+	}
+
+	#IMGOverlay.show {
+		align-items: center;
+		justify-content: center;
+		display: flex !important;
+	}
+
+	.overlay-image {
+		max-width: 90%;
+		max-height: 80vh;
+		margin-top: 40px;
+		border-radius: 8px;
+	}
+
+	.overlay-controls {
+		gap: 15px;
+		top: -5px;
+		right: 5%;
+		display: flex;
+		z-index: 10000000;
+		position: absolute;
+	}
+
+	.image-container {
+		display: flex;
+		position: relative;
+		justify-content: center;
+	}
+
+	.download-button,
+	.close-button {
+		width: 26px;
+		padding: 5px;
+		height: 26px;
+		display: flex;
+		cursor: pointer;
+		border-radius: 50%;
+		align-items: center;
+		background-color: #fff;
+		justify-content: center;
+	}
 </style>
 <div id="highlight_menu">
 	<div class="AI-BG-box">
@@ -846,6 +899,25 @@
 						<path d="M3.64362 8.00003C3.64362 5.70974 5.50027 3.85309 7.79056 3.85309C9.06546 3.85309 10.2057 4.42786 10.9671 5.33402C11.0399 5.42069 11.0743 5.56527 10.9942 5.64533L10.5291 6.11045C10.2141 6.42543 10.4372 6.964 10.8826 6.964H12.75C13.0261 6.964 13.25 6.74015 13.25 6.464V4.59664C13.25 4.15119 12.7114 3.92811 12.3964 4.24309L11.8532 4.78632C11.7983 4.84128 11.7013 4.81866 11.6513 4.75915C10.7273 3.65956 9.34048 2.95947 7.79056 2.95947C5.00674 2.95947 2.75 5.21621 2.75 8.00003C2.75 10.7839 5.00674 13.0406 7.79056 13.0406C9.95003 13.0406 11.7913 11.6828 12.5092 9.77593C12.5962 9.54499 12.4795 9.28729 12.2485 9.20034C12.0176 9.11338 11.7599 9.2301 11.6729 9.46104C11.0818 11.0312 9.5659 12.147 7.79056 12.147C5.50027 12.147 3.64362 10.2903 3.64362 8.00003Z" fill="white"></path>
 					</svg>
 				</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="IMGOverlay">
+	<div class="image-container">
+		<img class="overlay-image" src="" />
+		<div class="overlay-controls">
+			<div class="download-button" title="Download Image">
+				<svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M7.99468 2.03568C8.27083 2.03568 8.49468 2.25953 8.49468 2.53568V9.49166C8.49468 9.52273 8.53687 9.54374 8.55855 9.52148L10.5952 7.43046C10.7879 7.23264 11.1045 7.22847 11.3023 7.42115C11.5001 7.61382 11.5043 7.93038 11.3116 8.12819L9.08245 10.4168C8.49216 11.0229 7.51775 11.0211 6.92964 10.413L4.65768 8.06357C4.46571 7.86506 4.47102 7.54852 4.66952 7.35656C4.86803 7.1646 5.18457 7.1699 5.37653 7.36841L7.44934 9.51186C7.46518 9.52824 7.49468 9.51445 7.49468 9.49166V2.53568C7.49468 2.25953 7.71854 2.03568 7.99468 2.03568ZM3.01236 11.004C3.01236 10.7278 2.7885 10.504 2.51236 10.504C2.23622 10.504 2.01236 10.7278 2.01236 11.004V12.4643C2.01236 13.2928 2.68393 13.9643 3.51236 13.9643H12.5C13.3284 13.9643 14 13.2928 14 12.4643V11.004C14 10.7278 13.7761 10.504 13.5 10.504C13.2239 10.504 13 10.7278 13 11.004V12.4643C13 12.7405 12.7761 12.9643 12.5 12.9643H3.51236C3.23622 12.9643 3.01236 12.7405 3.01236 12.4643V11.004Z" fill="#2A343D" />
+				</svg>
+			</div>
+			<div class="close-button" title="Close">
+				<svg width="28" height="28" viewBox="0 0 28 28" fill="none">
+					<rect x="19.3085" y="8.1459" width="1.21218" height="15.7584" rx="0.606091" transform="rotate(46.6015 19.3085 8.1459)" fill="#2A343D" />
+					<rect x="20" y="19.1429" width="1.21218" height="15.7584" rx="0.606091" transform="rotate(135 20 19.1429)" fill="#2A343D" />
+				</svg>
 			</div>
 		</div>
 	</div>
