--- a/AIMenu.html
+++ b/AIMenu.html
@@ -189,15 +189,13 @@
 		fill: light-dark(currentColor, #fff);
 	}
 
-	.MenuBTNs:hover, .action-btn:hover {
+	.MenuBTNs:hover,
+	.action-btn:hover {
 		background: light-dark(#ccd9e1, rgb(255 255 255 / 40%));
 	}
 
 	#avatar svg path {
 		fill: light-dark(black, white);
-		transform: scale(0.8);
-		transform-origin: center;
-		transition: transform 0.3s ease;
 	}
 
 	.download-button:hover,
@@ -223,7 +221,8 @@
 	/* Hover Effects */
 	#dictate:hover,
 	#TopPause:hover,
-	.AI-BG-box button:hover, .insert-to-page-btn:hover {
+	.AI-BG-box button:hover,
+	.insert-to-page-btn:hover {
 		background-color: #401acc;
 	}
 
@@ -324,18 +323,19 @@
 		padding-inline-start: 14px !important;
 	}
 
-#AIMenu {
-    gap: 3%; /* Default: When .insert-to-page-btn is showing */
-    display: none;
-    margin-top: 1%;
-    margin-left: 19vw; /* Default: When .insert-to-page-btn is showing */
-    padding-bottom: 3%;
-}
+	#AIMenu {
+		gap: 3%; /* Default: When .insert-to-page-btn is showing */
+		display: none;
+		margin-top: 1%;
+		margin-left: 19vw; /* Default: When .insert-to-page-btn is showing */
+		padding-bottom: 4%;
+	}
 
-#AIMenu:has(> .insert-to-page-btn[style*="display: none"]) { /* When .insert-to-page-btn is hidden */
-    gap: 7%;
-    margin-left: 27vw;
-}
+	#AIMenu:has(> .insert-to-page-btn[style*='display: none']) {
+		/* When .insert-to-page-btn is hidden */
+		gap: 7%;
+		margin-left: 27vw;
+	}
 
 	.AnswerContainer {
 		top: 7px;
@@ -738,6 +738,13 @@
 		position: absolute;
 	}
 
+	#avatar svg path,
+	#speak svg path {
+		transform: scale(0.8);
+		transform-origin: center;
+		transition: transform 0.3s ease;
+	}
+
 	/* IMGOverlay */
 	#IMGOverlay {
 		top: 0;
@@ -815,7 +822,7 @@
 		font-size: 12px;
 		cursor: pointer;
 		padding: 6px 12px;
-    align-items: center;
+		align-items: center;
 		border-radius: 20px;
 		white-space: nowrap;
 		letter-spacing: 0.3px;
