--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</tr>
 				<tr>
 					<td>
-						<img src="Imgs/BCH.png" title="BTC" class="crypto-icon" />
+						<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
 						<p class="crypto-text">BTC</p>
 					</td>
 					<td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
