--- a/AIMenu.html
+++ b/AIMenu.html
@@ -626,14 +626,14 @@
 		left: 50%;
 		top: -24%;
 		z-index: -1;
-		color: #ffffff;
 		font-size: 10px;
 		padding: 4px 8px;
 		position: absolute;
-		background-color: #373a47;
 		border-top-left-radius: 6px;
 		transform: translateX(-50%);
 		border-top-right-radius: 6px;
+		color: light-dark(black, white);
+		background-color: light-dark(#d0dbe3, #373a47);
 	}
 
 	/* Mode-specific styles Writing Mode */
