--- a/AIMenu.html
+++ b/AIMenu.html
@@ -296,7 +296,9 @@
 	/* Containers */
 	#finalanswer-txt {
 		padding-top: 4%;
+		letter-spacing: 0.2px;
 		color: light-dark(black, #ffffff);
+		font-family: 'Google Sans', 'Roboto', sans-serif;
 	}
 
 	#finalanswer-txt img {
@@ -432,7 +434,7 @@
 		border-radius: 15px;
 		transform: translateX(-50%);
 		box-shadow: #767e8499 0px 0px 0px 10px;
-		background: light-dark(#e7edf1, rgb(37, 36, 53));
+		background: light-dark(#e7edf1, #262836);
 	}
 
 	/* Arrow elements */
@@ -511,7 +513,7 @@
 		padding-bottom: 10px;
 		transform: translateX(-50%);
 		box-shadow: inset #767e8499 0px 0px 0px 10px;
-		background: light-dark(#e7edf1, rgb(37, 36, 53));
+		background: light-dark(#e7edf1, #262836);
 	}
 
 	.animated-prompt-box::before {
@@ -534,6 +536,8 @@
 
 	#msg-txt p {
 		margin: 0;
+		letter-spacing: 0.2px;
+		font-family: 'Google Sans', 'Roboto', sans-serif;
 	}
 
 	.GreyBar,
@@ -590,7 +594,7 @@
 		width: 96%;
 		height: 1px;
 		position: fixed;
-		margin-top: 3.5%;
+		margin-top: 2.5%;
 		margin-left: -5%;
 		background-color: #41455a;
 	}
