--- a/AIMenu.html
+++ b/AIMenu.html
@@ -591,11 +591,11 @@
 	}
 
 	#LineEl {
-		width: 96%;
 		height: 1px;
+		width: 36.5vw;
 		position: fixed;
-		margin-top: 2.5%;
-		margin-left: -5%;
+		margin-top: 1.5vw;
+		margin-left: -2.4vw;
 		background-color: #41455a;
 	}
 
