--- a/AIMenu.html
+++ b/AIMenu.html
@@ -142,7 +142,7 @@
 
 	#dictate,
 	#TopPause {
-		left: 91.5%;
+		left: 37vw;
 		width: 32px;
 		height: 32px;
 		display: none;
@@ -387,7 +387,7 @@
 		font-size: 12px;
 		z-index: 999999;
 		user-select: none;
-		margin-left: 72.5%;
+		margin-left: 31vw;
 		align-items: center;
 		font-family: 'Be Vietnam', sans-serif;
 	}
@@ -601,8 +601,8 @@
 
 	#prompt {
 		left: 2%;
+		width: 28vw;
 		border: none;
-		width: 63.5%;
 		font-size: 14px;
 		outline: none; /* Hide onclick borders */
 		user-select: none;
@@ -717,7 +717,7 @@
 	#ContainerGemini.BoxGemini {
 		position: fixed;
 		margin-top: 5.2%;
-		margin-left: -6.2%;
+		margin-left: -2vw%;
 	}
 
 	.AI-BG-box button img {
