--- a/AIMenu.html
+++ b/AIMenu.html
@@ -717,7 +717,7 @@
 	#ContainerGemini.BoxGemini {
 		position: fixed;
 		margin-top: 5.2%;
-		margin-left: -2vw%;
+		margin-left: -2vw;
 	}
 
 	.AI-BG-box button img {
