--- a/AIMenu.html
+++ b/AIMenu.html
@@ -142,8 +142,8 @@
 
 	#dictate,
 	#TopPause {
-		left: 37vw;
 		width: 32px;
+		left: 36.4vw;
 		height: 32px;
 		display: none;
 		z-index: 999999;
@@ -336,7 +336,8 @@
 	#AIMenu:has(> .insert-to-page-btn[style*='display: none']) {
 		/* When .insert-to-page-btn is hidden */
 		gap: 7%;
-		margin-left: 27vw;
+		position: fixed;
+		margin-left: 27.4vw;
 	}
 
 	.AnswerContainer {
@@ -387,7 +388,7 @@
 		font-size: 12px;
 		z-index: 999999;
 		user-select: none;
-		margin-left: 31vw;
+		margin-left: 29vw;
 		align-items: center;
 		font-family: 'Be Vietnam', sans-serif;
 	}
@@ -597,8 +598,8 @@
 
 	#prompt {
 		left: 2%;
-		width: 28vw;
 		border: none;
+		width: 25.5vw;
 		font-size: 14px;
 		outline: none; /* Hide onclick borders */
 		user-select: none;
