--- a/AIMenu.html
+++ b/AIMenu.html
@@ -306,6 +306,7 @@
 
 	#finalanswer-txt {
 		overflow-y: auto;
+		overflow-x: clip;
 		margin-top: -0.6%;
 		letter-spacing: 0.2px;
 		color: light-dark(black, #ffffff);
