--- a/AIMenu.html
+++ b/AIMenu.html
@@ -9,8 +9,8 @@
 </svg>
 <style>
 	@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam&family=Google+Sans&display=swap');
-	@import url('https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css') (prefers-color-scheme: light);
-	@import url('https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css') (prefers-color-scheme: dark);
+	@import url('https://cdn.jsdelivr.net/gh/highlightjs/highlight.js@main/src/styles/github.css') (prefers-color-scheme: light);
+	@import url('https://cdn.jsdelivr.net/gh/highlightjs/highlight.js@main/src/styles/github-dark.css') (prefers-color-scheme: dark);
 
 	/* Keyframes */
 	@keyframes stateAnimation {
