--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
 					</td>
 					<td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
 				</tr>
+				<!-- PM -->
+				<tr class="PM">
+					<td>
+						<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
+						<p class="crypto-text">BTC</p>
+					</td>
+					<td class="wallet-address" title="Click to copy">bc1quay76sm5jdnqmdm4lvhcysukw9a2a8v080f8t6</td>
+				</tr>
 			</table>
 		</div>
 		<div class="copy-message" id="copyMessage">Copied!</div>
