--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 	<body data-new-gr-c-s-check-loaded="14.1108.0" data-gr-ext-installed="">
 		<div class="container">
 			<h1>Hacker09 Support</h1>
-			<div class="container mx-auto px-4 py-12 max-w-6xl">
-				<header class="text-center mb-12">
+			<div class="container mx-auto px-4 py-12 max-w-6xl text-center">
+				<header class="mb-12">
 					<h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Hacker09 Support</h1>
+					
 					<div class="bg-white rounded-xl shadow-md p-6 mb-8 max-w-2xl mx-auto">
 						<div class="flex flex-col sm:flex-row justify-center items-center gap-4">
 							<a href="mailto:github.com.036t8@passfwd.com" class="flex items-center text-blue-600 hover:text-blue-800 transition-colors">
@@ -22,13 +23,19 @@
 							</a>
 						</div>
 					</div>
+		
 					<div class="flex flex-wrap justify-center gap-4 mb-12">
-						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fab fa-patreon mr-2 text-xl"></i> Patreon </a>
-						<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-400 hover:bg-blue-500 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-coffee mr-2 text-xl"></i>Ko-Fi</a>
-						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee </a>
+						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all">
+							<i class="fab fa-patreon mr-2 text-xl"></i> Patreon
+						</a>
+						<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-400 hover:bg-blue-500 text-white px-6 py-3 rounded-lg flex items-center transition-all">
+							<i class="fas fa-coffee mr-2 text-xl"></i> Ko-Fi
+						</a>
+						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all">
+							<i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee
+						</a>
 					</div>
 				</header>
-			</div>
 			<table>
 				<tbody>
 					<tr>
