--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 		<link rel="icon" href="Imgs/BTC.png" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-		<script src="https://cdn.tailwindcss.com"></script>
+		<script src=""></script>
 	</head>
 	<body data-new-gr-c-s-check-loaded="14.1108.0" data-gr-ext-installed="">
 		<div class="container">
 			<div class="container mx-auto px-4 py-12 max-w-6xl text-center">
 				<header class="mb-12">
 					<h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Hacker09 Support</h1>
-					
 					<div class="bg-white rounded-xl shadow-md p-6 mb-8 max-w-2xl mx-auto">
 						<div class="flex flex-col sm:flex-row justify-center items-center gap-4">
 							<a href="mailto:github.com.036t8@passfwd.com" class="flex items-center text-blue-600 hover:text-blue-800 transition-colors">
